--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,7 +10,7 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="Base.Theme.MyApplication"
+        android:theme="@style/Base.Theme.MyApplication"
         tools:targetApi="31">
         <activity
             android:name=".MainActivity"
@@ -21,6 +21,7 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity android:name=".HelloActivity"/>
     </application>
 
 </manifest>
